--- a/20230210_sesac_final/yolov7/easy-yolov7-main/numpy-reproduce-error-venv/pyvenv.cfg
+++ b/20230210_sesac_final/yolov7/easy-yolov7-main/numpy-reproduce-error-venv/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /Users/jongya/miniforge3/envs/sesac_final/bin
+home = /Library/Frameworks/Python.framework/Versions/3.7/bin
 include-system-site-packages = false
-version = 3.9.0
+version = 3.7.0
