--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 20230210_sesac_final/yolov7/yolov7/best.weights
 20230210_sesac_final/yolov7/yolov7/5.pt
 20230210_sesac_final/yolov7/yolov7/best.pt
+20230210_sesac_final/yolov7/yolov7/traced_model.pt
