--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 20230210_sesac_final/yolov7/yolov7/5.pt
 20230210_sesac_final/yolov7/yolov7/best.pt
 20230210_sesac_final/yolov7/yolov7/traced_model.pt
+20230210_sesac_final/some.env
+20230210_sesac_final/yolov5/yolov5.env
