--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 20230210_sesac_final/some.env
 20230210_sesac_final/yolov5/yolov5.env
 20230210_sesac_final/yolov5/aws.env
+20230210_sesac_final/스프핑 부트_핵심가이드(2022.06)OCR.pdf
