--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 20230210_sesac_final/yolo7-codingbug/yolov7/best.pt
 20230210_sesac_final/yolo7-codingbug/yolov7/traced_model.pt
 20230210_sesac_final/yolo7-codingbug/yolov7/yolov7.pt
+20230210_sesac_final/yolo7-codingbug/yolov7/custom_test_best.pt
+20230210_sesac_final/yolo7-codingbug/yolov7/custom_test_best2.pt
+20230210_sesac_final/yolo7-codingbug/yolov7/pretrain_wild5_coco_best.pt
+20230210_sesac_final/yolo7-codingbug/yolov7/wild5_best.pt
+20230210_sesac_final/yolo7-codingbug/yolov7/wild5_coco_best.pt
