--- a/20230210_sesac_final/yolo7-codingbug/yolov7/requirements.txt
+++ b/20230210_sesac_final/yolo7-codingbug/yolov7/requirements.txt
@@ -41,3 +41,13 @@ thop  # FLOPs computation
 # Tracking ------------------------------------
 filterpy
 scikit-image
+
+# Sound ------------------------------------
+pydub
+
+# dotenv ------------------------------------
+python-dotenv
+
+# AWS ------------------------------------
+pymysql
+boto3
