--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 20230210_sesac_final/yolo7-codingbug/yolov7/pretrain_wild5_coco_best.pt
 20230210_sesac_final/yolo7-codingbug/yolov7/wild5_best.pt
 20230210_sesac_final/yolo7-codingbug/yolov7/wild5_coco_best.pt
+20230210_sesac_final/aws copy.env
+20230210_sesac_final/aws.env
